--- a/src/audios/upload-audios.html
+++ b/src/audios/upload-audios.html
@@ -3,15 +3,9 @@
         <div class="col-md-10 col-md-offset-2">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h1 class="panel-title text-center"><strong>${"photos.upload-files" & t}</strong>
+                    <h1 class="panel-title text-center"><strong>${"audios.upload-files" & t}</strong>
                     </h1>
                 </div>
-                <!-- <div>
-                        <p style="align-content: right;padding:20px;font-size:120%;" dir="rtl">
-                            ${'photos.sharing' & t}
-                            <strong>photos@${host_name}<strong>
-                        </p>
-                    </div> -->
                 <div class="panel-body">
                     <section class="container">
 
@@ -19,40 +13,40 @@
                             <div class="form-group">
                                 <label
                                     style="margin-left:191px;width:150px;background-color:lightgray;border:solid 1px darkgray;border-radius:5px;text-align:center;padding:6px;"
-                                    class="control-label" for="photos">
-                                    ${'photos.select-photos' & t}
+                                    class="control-label" for="audios">
+                                    ${'audios.select-audios' & t}
                                 </label>
                                 <div>
-                                    <input style="display:none" type="file" multiple id="photos" accept="image/jpeg"
-                                        files.bind="photos">
+                                    <input style="display:none" type="file" multiple id="audios" accept="audio/mp3"
+                                        files.bind="audios">
                                 </div>
                             </div>
-                            <div class="form-group" if.bind="photos && photos.length > 0">
-                                <h4 style="margin-left:191px;width:150px;text-align:center"> ${photos.length}
-                                    ${'photos.photos-were-selected' & t}</h4>
+                            <div class="form-group" if.bind="audios && audios.length > 0">
+                                <h4 style="margin-left:191px;width:150px;text-align:center">
+                                    ${'audios.audios-were-selected' & t}  ${audios.length}</h4>
                                 <div style="padding-left:191px">
                                     <button style="margin-left:auto; margin-right:auto;width:150px;" type="submit"
-                                        class="btn btn-success">${'photos.save' & t}</button>
+                                        class="btn btn-success">${'audios.save' & t}</button>
                                 </div>
                             </div>
                             <div style="padding-left:175px;margin-top:16px;" if.bind="! working">
                                 <button style="margin-left:auto; margin-right:auto;width:150px;"
-                                    click.delegate="cancel()" type="submit" class="btn btn-warning">${'photos.cancel' &
+                                    click.delegate="cancel()" type="submit" class="btn btn-warning">${'audios.cancel' &
                                     t}</button>
                             </div>
                         </form>
                     </section>
                     <div if.bind="working">
-                        <h3 style="display:flex;justify-content:center;">${'photos.upload-in-progress' & t}.
-                            ${photos_left} ${'photos.left' & t}</h3>
+                        <h3 style="display:flex;justify-content:center;">${'audios.upload-in-progress' & t}.
+                            ${audios_left} ${'audios.left' & t}</h3>
                     </div>
                     <div if.bind="upload_finished" style="margin-left:auto;margin-right:auto;width:350px;">
                         <h3 if.bind="uploaded.length>0" class="text-center success">${uploaded.length}
-                            ${'photos.photos-uploaded' & t}</h3>
+                            ${'audios.audios-uploaded' & t}</h3>
                         <h3 if.bind="duplicates.length>0" class="text-center">${duplicates.length}
-                            ${'photos.photos-duplicate' & t} </h3>
+                            ${'audios.audios-duplicate' & t} </h3>
                         <h3 if.bind="failed.length>0" class="text-center errors">${failed.length}
-                            ${'photos.photos-failed' & t} </h3>
+                            ${'audios.audios-failed' & t} </h3>
                         <ul class="errors">
                             <li repeat.for="f of failed">
                                 ${f}
