--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -83,14 +83,17 @@
                         <li repeat.for="story of story_list | filter: filter : '*selected' : 'name' : 'author' | take : 9999" dir="${theme.rtltr}"
                             if.bind="story.used_for==used_for"
                             style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;margin-bottom:16px;">
-                            <div style="height:130px;overflow:hidden;padding-right:20px;padding-left:20px;padding-top:0px;cursor:pointer;"
+                            <div class="outer-story-preview"
                                 
                                 click.delegate="jump_to_the_full_story($event, story)">
                                 <!--<div style="margin-bottom: 10px;" aubs-tooltip="text.bind:story.topics">-->
-                                <div style="margin-bottom: 10px;" class="story-preview" if.bind="used_for!=8">
+                                <div class="story-preview" style="margin-bottom: 10px;" if.bind="used_for!=8">
                                     <div>
                                         <img if.bind="used_for==3" src.bind="story.photo_src" width="140" />
                                         <img if.bind="used_for==9" src.bind="story.doc_jpg_url" width="140" />
+                                        <audio controls if.bind="used_for==10">
+                                            <source src="${story.audio_path}" type="audio/mpeg">
+                                        </audio>
                                     </div>
                                     <editable settings.bind="{show_author:true, show_date:false, class:'story-section', checkable: true}"
                                         story.bind="story" change.delegate="toggle_story_selection(story, $event, $index)"
