--- a/src/resources/elements/quiz/quiz.html
+++ b/src/resources/elements/quiz/quiz.html
@@ -6,6 +6,11 @@
                 ${main_button_text}
                 <span class="caret"></span>
             </button>
+            <button class="btn btn-basic btn-lg" 
+                if.bind="dirty" t="[title]quiz.clear-all"
+                click.delegate="clear_all()">
+                ${'quiz.clear-all' & t}
+            </button>
             <help topic="using-quiz" style="margin-top:18px;" if.bind="q_state==USING" params.bind="help_data"
                 position="bottom"></help>
             <help topic="editing-quiz" style="margin-top:18px;" if.bind="q_state!=USING" params.bind="help_data"
@@ -28,7 +33,6 @@
                     <ul class="dropdown-menu dropdown-menu-right answers"
                         style="padding-right:6px;padding-left:5px;min-width:180px;" if.bind="question.qid">
                         <li repeat.for="answer of question.answers" title.bind="answer.description"
-                            stylexx="padding: 5px;height:38px;padding-right:0;padding-left:5px;"
                             style="margin-bottom:5px;" class="answer ${answer.checked ? 'checked' : ''}">
                             <div class="btn-group dropdown border-right"
                                 aubs-dropdown="auto-close.bind: autoClose;">
