--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -113,10 +113,11 @@
                     </ul>
 
                 </div>
-                <div class="col-md-4 col-sm-12" if.bind="theme.is_desktop || editing_filters" id="story-filters">
+                <div class="col-md-4 col-sm-12" if.bind="theme.is_desktop || editing_filters" id="story-filters" style="height:600px;overflow:auto;">
                     <div class="row" style="position:relative;">
                         <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">${'stories.categories' & t}</div>
                         <help if.bind="phase == 'not-editing'" topic="tags" position="bottom" style="position:absolute;left:0px;top:26px;"></help>
+                        <help if.bind="phase == 'selecting-stories'" topic="selecting-stories" position="bottom" style="position:absolute;left:0px;top:26px;"></help>
                         <help if.bind="phase=='ready-to-edit'" topic="topics.ready-to-edit", position="bottom" style="position:absolute;left:0px;top:26px;"></help>
                         <multi-select options.bind="topic_list"
                             place_holder_text="photos.click-topic"
