--- a/src/resources/elements/photo-strip.html
+++ b/src/resources/elements/photo-strip.html
@@ -7,7 +7,7 @@
             aubs-tooltip="text.bind:slide.title" click.delegate="on_click($event, slide)" />
     </div>
     <div class="slide-control prev" style="top:87%;left:6px;" click.delegate="goto_photo_table()" t="[title]photos.show-in-photo-page" >
-        <i class="fa fa-table" style="font-size:1.3em"></i>
+        <i class="fas fa-table" style="font-size:1.3em;color:yellow;"></i>
     </div>
     <help topic.bind="photo-strip" position="right"></help>
     <template if.bind="settings.arrows && show_arrows">
