allow "_" in site name

--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -215,7 +215,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row hide-if-small" style="width:100%;margin-right:-10px;">
+            <div class="row hide-if-small" style="width:100%;margin:0px;">
                 <timeline first_year.bind="params.first_year" last_year.bind="params.last_year" change.delegate="time_range_changed($event)"></timeline>
             </div>
         </div>
