--- a/src/admin/edit-user.html
+++ b/src/admin/edit-user.html
@@ -3,7 +3,7 @@
         <ux-dialog-header>
             <h3>User Information</h3>
         </ux-dialog-header>
-        <ux-dialog-body style="padding:10px;">
+        <ux-dialog-body>
             <form class="form-horizontal" role="form">
                 <div class="form-group">
                     <input type="text" class="form-control" id="inputFirstName3" placeholder="First Name" value.bind="curr_user.first_name">
