--- a/src/admin/group-edit.html
+++ b/src/admin/group-edit.html
@@ -1,22 +1,28 @@
 <template>
-        <ux-dialog style="padding:12px;">
-            <ux-dialog-header>
-                <h3>User Information</h3>
-            </ux-dialog-header>
-            <ux-dialog-body style="padding:10px;">
-                <form class="form-horizontal" role="form">
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="inputFirstName3" placeholder="First Name" value.bind="curr_group.title">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="inputLastName3" placeholder="Last Name" value.bind="curr_group.description">
-                    </div>
-                </form>
-            </ux-dialog-body>
-            <ux-dialog-footer>
-                <button type="button" class="btn btn-primary" click.delegate="save()">Save</button>
-                <button type="button" class="btn btn-info" click.delegate="cancel()">Cancel</button>
-            </ux-dialog-footer>
-        </ux-dialog>
-    </template>
-    
+    <ux-dialog style="padding:12px;">
+        <ux-dialog-header>
+            <h3>${'groups.group-details' & t}</h3>
+        </ux-dialog-header>
+        <ux-dialog-body>
+            <form class="form-horizontal" role="form">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="${'groups.title' & t}"
+                        value.bind="curr_group.title">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="${'groups.description' & t}"
+                        value.bind="curr_group.description">
+                </div>
+                <div class="form-group">
+                    <span class="error" if.bind="error_message">${error_message}</span>
+                </div>
+            </form>
+        </ux-dialog-body>
+        <ux-dialog-footer>
+            <button type="button" class="btn btn-primary"
+                disabled="${curr_group.title && curr_group.description ? '' : 'disabled'}"
+                click.delegate="save()">Save</button>
+            <button type="button" class="btn btn-info" click.delegate="cancel()">Cancel</button>
+        </ux-dialog-footer>
+    </ux-dialog>
+</template>
