--- a/src/admin/groups-manager.html
+++ b/src/admin/groups-manager.html
@@ -7,7 +7,7 @@
         <div style="height:730px;width:1200px;margin-left:auto;margin-right:auto;overflow:auto;">
             <div class="form-inline">
                 <div class="form-group">
-                    <a href class="btn btn-primary" click.delegate="add_or_update()" style="margin-bottom:1em;">
+                    <a href class="btn btn-primary" click.delegate="add_or_update(null)" style="margin-bottom:1em;">
                         ${'groups.add-group' & t}
                     </a>
                 </div>
@@ -17,14 +17,14 @@
                 </div>
             </div>
             <table class="table table-striped" aurelia-table="data.bind: group_list; display-data.bind: $displayData; 
-                current-page.bind: currentPage; page-size.bind: pageSize; total-items.bind: totalItems;
-                filters.bind:filters;">
+                current-page.bind: currentPage; page-size.bind: pageSize; total-items.bind: totalItems;">
+                <!-- filters.bind:filters;"> -->
                 <thead>
                     <tr>
                         <th aut-sort="key: id">ID</th>
                         <th aut-sort="key: email">${'groups.title' & t}</th>
                         <th aut-sort="key: first_name">${'groups.description' & t}</th>
-                        <th aut-sort="key: last_name">${'groups.logo' & t}</th>
+                        <th>${'groups.logo' & t}</th>
                         <!--<th>Created></th>-->
                         <th>${'groups.edit' & t}</th>
                         <th>${'groups.delete' & t}</th>
@@ -36,9 +36,20 @@
                         <td>${item.title}</td>
                         <td>${item.description}</td>
                         <td>
-                            <a href click.delegae="upload_logo(item.id)">
-                                <img src.bind="item.logo_url" />
-                            </a>
+                            <form submit.delegate="upload_logo(item.id)">
+                                <div class="form-group">
+                                    <label for="logo-image-${item.id}">
+                                        upload
+                                        <img src.bind="item.logo_url" />
+                                    </label>
+                                    <input style="display:none" type="file" multiple id="logo-image-${item.id}" accept="image/jpeg"
+                                        files.bind="logo_images">
+                                </div>
+                                <div class="form-group">
+                                    <button type="submit">
+                                        Upload Logo
+                                    </button>
+                            </form>
                         </td>
                         <!--<td>${item.created}</td>-->
                         <td class="center">
