--- a/src/admin/groups-manager.html
+++ b/src/admin/groups-manager.html
@@ -36,16 +36,15 @@
                         <td>${item.title}</td>
                         <td>${item.description}</td>
                         <td>
-                            <form submit.delegate="upload_logo(item.id)">
+                            <form class="form-inline" submit.delegate="upload_logo(item)">
                                 <div class="form-group">
                                     <label for="logo-image-${item.id}">
-                                        upload
-                                        <img src.bind="item.logo_url" />
+                                        <img width="32" src.bind="item.logo_url" />
                                     </label>
-                                    <input style="display:none" type="file" multiple id="logo-image-${item.id}" accept="image/jpeg"
-                                        files.bind="logo_images">
+                                    <input style="display:none" type="file" id="logo-image-${item.id}" accept="image/jpeg"
+                                        files.bind="item.logo_images">
                                 </div>
-                                <div class="form-group">
+                                <div class="form-group" if.bind="item.logo_images">
                                     <button type="submit">
                                         Upload Logo
                                     </button>
