--- a/src/groups/group-edit.html
+++ b/src/groups/group-edit.html
@@ -21,8 +21,8 @@
         <ux-dialog-footer>
             <button type="button" class="btn btn-primary"
                 disabled="${curr_group.title && curr_group.description ? '' : 'disabled'}"
-                click.delegate="save()">Save</button>
-            <button type="button" class="btn btn-info" click.delegate="cancel()">Cancel</button>
+                click.delegate="save()">${'groups.save' & t}</button>
+            <button type="button" class="btn btn-info" click.delegate="cancel()">${'groups.cancel' & t}</button>
         </ux-dialog-footer>
     </ux-dialog>
 </template>
