--- a/src/groups/groups-manager.html
+++ b/src/groups/groups-manager.html
@@ -1,5 +1,5 @@
 <template>
-    <require from="./admin.css"></require>
+    <require from="../admin/admin.css"></require>
     <div style="height:95%;margin-top:0px;direction:ltr" dir="ltr">
         <div style="width:400px;margin-left:auto;margin-right:auto">
             <h3 class="center">${'groups.groups-manager' & t}</h3>
@@ -28,6 +28,7 @@
                         <!--<th>Created></th>-->
                         <th>${'groups.edit' & t}</th>
                         <th>${'groups.delete' & t}</th>
+                        <th>${'groups.link' & t}</th>
                     </tr>
                 </thead>
                 <tbody style="height:600px;overflow:auto;">
@@ -35,14 +36,14 @@
                         <td>${item.id}</td>
                         <td>${item.title}</td>
                         <td>${item.description}</td>
-                        <td>
+                        <td style="margin:0;padding:0;">
                             <form class="form-inline" submit.delegate="upload_logo(item)">
                                 <div class="form-group">
-                                    <label for="logo-image-${item.id}">
-                                        <img width="32" src.bind="item.logo_url" />
+                                    <label for="logo-image-${item.id}" style="margin:0;">
+                                        <img width="32" src.bind="item.logo_url" style="padding:0;" />
                                     </label>
-                                    <input style="display:none" type="file" id="logo-image-${item.id}" accept="image/jpeg"
-                                        files.bind="item.logo_images">
+                                    <input style="display:none" type="file" id="logo-image-${item.id}"
+                                        accept="image/jpeg" files.bind="item.logo_images">
                                 </div>
                                 <div class="form-group" if.bind="item.logo_images">
                                     <button type="submit">
@@ -59,6 +60,11 @@
                         <td class="center">
                             <a href title="Delete" click.delegate="delete_group(item)">
                                 <i class="far fa-trash"></i>
+                            </a>
+                        </td>
+                        <td class="center">
+                            <a href title="Delete" click.delegate="copy_link(item)">
+                                <i class="far fa-link"></i>
                             </a>
                         </td>
                     </tr>
