--- a/src/groups/upload-photo.html
+++ b/src/groups/upload-photo.html
@@ -1,3 +1,8 @@
 <template>
+    <require from="../admin/admin.css"></require>
+    <div dir='ltr' class="content-area">
+        Logo ${group_id}
+        <img src="${logo_url}" />
+    </div>
 
 </template>
