--- a/src/groups/groups-manager.html
+++ b/src/groups/groups-manager.html
@@ -42,7 +42,7 @@
                                         <img width="32" src.bind="item.logo_url" style="padding:0;cursor:pointer;" />
                                     </label>
                                     <input style="display:none" type="file" id="logo-image-${item.id}"
-                                        accept="image/jpeg" files.bind="item.logo_images">
+                                        accept="image/*" files.bind="item.logo_images">
                                 </div>
                                 <div class="form-group" if.bind="item.logo_images">
                                     <button type="submit">
