--- a/src/photos/upload-photos.html
+++ b/src/photos/upload-photos.html
@@ -11,32 +11,42 @@
 
                         <form class="form-horizontal" submit.delegate="save()">
                             <div class="form-group">
-                                <label style="margin-left:191px;width:150px;background-color:lightgray;border:solid 1px darkgray;border-radius:5px;text-align:center;padding:6px;"
+                                <label
+                                    style="margin-left:191px;width:150px;background-color:lightgray;border:solid 1px darkgray;border-radius:5px;text-align:center;padding:6px;"
                                     class="control-label" for="photos">
                                     ${'photos.select-photos' & t}
                                 </label>
                                 <div>
-                                    <input style="display:none" type="file" multiple id="photos" accept="image/jpeg" files.bind="photos">
+                                    <input style="display:none" type="file" multiple id="photos" accept="image/*"
+                                        files.bind="photos">
                                 </div>
                             </div>
                             <div class="form-group" if.bind="photos && photos.length > 0">
-                                <h4 style="margin-left:191px;width:150px;text-align:center"> ${photos.length} ${'photos.photos-were-selected' & t}</h4>
+                                <h4 style="margin-left:191px;width:150px;text-align:center"> ${photos.length}
+                                    ${'photos.photos-were-selected' & t}</h4>
                                 <div style="padding-left:191px">
-                                    <button style="margin-left:auto; margin-right:auto;width:150px;" type="submit" class="btn btn-success">${'photos.save' & t}</button>
+                                    <button style="margin-left:auto; margin-right:auto;width:150px;" type="submit"
+                                        class="btn btn-success">${'photos.save' & t}</button>
                                 </div>
                             </div>
-                        <div style="padding-left:175px;margin-top:16px;" if.bind="! working">
-                            <button style="margin-left:auto; margin-right:auto;width:150px;" click.delegate="cancel()" type="submit" class="btn btn-warning">${'photos.cancel' & t}</button>
-                        </div>
-                    </form>
+                            <div style="padding-left:175px;margin-top:16px;" if.bind="! working">
+                                <button style="margin-left:auto; margin-right:auto;width:150px;"
+                                    click.delegate="cancel()" type="submit" class="btn btn-warning">${'photos.cancel' &
+                                    t}</button>
+                            </div>
+                        </form>
                     </section>
                     <div if.bind="working">
-                        <h3 style="display:flex;justify-content:center;">${'photos.upload-in-progress' & t}. ${photos_left} ${'photos.left' & t}</h3>
+                        <h3 style="display:flex;justify-content:center;">${'photos.upload-in-progress' & t}.
+                            ${photos_left} ${'photos.left' & t}</h3>
                     </div>
                     <div if.bind="upload_finished" style="margin-left:auto;margin-right:auto;width:350px;">
-                        <h3 if.bind="uploaded.length>0" class="text-center success">${uploaded.length} ${'photos.photos-uploaded' & t}</h3>
-                        <h3 if.bind="duplicates.length>0" class="text-center" >${duplicates.length} ${'photos.photos-duplicate' & t} </h3>
-                        <h3 if.bind="failed.length>0" class="text-center errors">${failed.length} ${'photos.photos-failed' & t} </h3>
+                        <h3 if.bind="uploaded.length>0" class="text-center success">${uploaded.length}
+                            ${'photos.photos-uploaded' & t}</h3>
+                        <h3 if.bind="duplicates.length>0" class="text-center">${duplicates.length}
+                            ${'photos.photos-duplicate' & t} </h3>
+                        <h3 if.bind="failed.length>0" class="text-center errors">${failed.length}
+                            ${'photos.photos-failed' & t} </h3>
                         <ul class="errors">
                             <li repeat.for="f of failed">
                                 ${f}
@@ -50,17 +60,20 @@
     <style>
         h3.success {
             background-color: green;
-            color:white;
-        }
-        h3.errors {
-            background-color:red;
             color: white;
         }
+
+        h3.errors {
+            background-color: red;
+            color: white;
+        }
+
         ul.errors {
             list-style-type: none;
             background-color: red;
             color: white;
         }
+
         ul.errors li {
             float: right;
         }
