--- a/src/resources/elements/multi-select/multi-select.html
+++ b/src/resources/elements/multi-select/multi-select.html
@@ -70,6 +70,9 @@
             css="max-height:${option_list_height}px;min-height:132px;" 
             if.bind="options && options.length > 0 && (filter.length > 0 || (! settings.show_only_if_filter)) ">
             <ul css="width:${width}px;padding-left:20px;" if.bind="true || unselected_options===[]">
+                <li if.bind="can_show_untagged" class="${to_show_untagged ? 'active' : ''}">
+                    <a click.delegate="show_untagged()">${'multi-select.show-untagged' & t}</a>
+                </li>
                 <li repeat.for="option of options | filter: filter : 'name' | filterBySet : selected_options_set : 'exclude' : 'name' | take : 999">
                     <div class="option-item" 
                         css="margin:0;padding:0;padding-right:${(option.level || 0) * 16 + 2}px;width:${inner_width}px" 
